# HeliBoard-AI-experiment

./: .gitignore  README.md  gradle.properties  settings.gradle
.github/workflows/: build-apk.yml  build-debug-apk.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/llama/java/helium314/keyboard/latin/completion/: LlamaCppInferenceBackend.kt  LlamaSupport.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/helium314/keyboard/keyboard/internal/: KeyboardIconsSet.kt
app/src/main/java/helium314/keyboard/latin/: LatinIME.java  Suggest.kt  TestInputActivity.kt
app/src/main/java/helium314/keyboard/latin/completion/: CompletionCandidate.kt  CompletionDebug.kt  CompletionDebugView.kt  CompletionEngine.kt  CompletionProvider.kt  CompletionStripView.kt  FileModelStorage.kt  HybridCompletionProvider.kt  InferenceBackend.kt  LlamaCppInferenceBackend.kt  MediaPipeInferenceBackend.kt  ModelCatalog.kt  ModelCompletionProvider.kt  ModelDownloader.kt  ModelRepository.kt  NgramChainCompletionProvider.kt  PromptBuilder.kt  ResponseParser.kt  StubCompletionProvider.kt
app/src/main/java/helium314/keyboard/latin/inputlogic/: InputLogic.java
app/src/main/java/helium314/keyboard/latin/settings/: Defaults.kt  Settings.java  SettingsValues.java
app/src/main/java/helium314/keyboard/latin/suggestions/: SuggestionStripView.kt
app/src/main/java/helium314/keyboard/latin/utils/: ToolbarUtils.kt
app/src/main/java/helium314/keyboard/settings/: SearchScreen.kt  SettingsContainer.kt  SettingsTestField.kt
app/src/main/java/helium314/keyboard/settings/preferences/: BackupRestorePreference.kt  CompletionModelPreference.kt
app/src/main/res/layout/: main_keyboard_frame.xml  suggestions_strip.xml
app/src/main/res/values/: strings.xml
app/src/test/: AndroidManifest.xml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
llama/src/main/java/helium314/keyboard/llama/: LlamaBackend.kt  LlamaNative.kt
tools/completion_harness/: CMakeLists.txt  README.md  harness.cpp
(+12 files in other folders)
